[package]
name = "water_safety_wasm"
version = "1.1.0"
authors = ["Najia Ahmad"]
edition = "2021"
description = "Water Safety Risk Engine - WASM Module (bit-exact with JS)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
